# cpphttp

./: .gitignore  .zshrc  CMakeLists.txt  Makefile  README.md  example.cpp  log.txt  server.cpp  server.hpp
cert/: info.md  info.txt
docs/: index.html  script.js  style.css
include/: colors.hpp  server.hpp  threadpool.hpp  tls.cpp  tls.hpp
include/nlohmann/: json_fwd.hpp
include/plugins/: logger.hpp  ratelimit.hpp  timer.hpp
src/: example.cpp  main.cpp  server.cpp
test/: plugin.hpp  test.cpp  test.hpp
